--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ onClick=window.open("http://ivo:123456@84.40.117.52:82/cgi-bin/cmd/encoder?GET_S
        <div id="box3cont"><img src="img/box/b3cont.jpg" width="910" height="203" alt="b3cont" /></div>
        <div id="footer">"МАКС 2020 <a href="sitemap.html">карта на сайта</a> | <a href="kontakti.html">контакти</a></div>
 </div>
- 
+         </div>
 
 </div>
 
