--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 NAME="My Window Name" title="Webcam "
 onClick=window.open("live.html","Ratting","width=900,height=500,0,status=0,scrollbars=1");>ТУК</a> <br /> <br/><br/>За Safari,Google Chrome,<br/>Firefox натиснете<a href="javascript:void(0);"
 NAME="My Window Name" title="Webcam"
-onClick=window.open("http://ivo:123456@84.40.117.52:82/cgi-bin/cmd/encoder?GET_STREAM","Ratting","width=900,height=500,0,status=0,scrollbars=1");>ТУК</a></div>
+onClick=window.open("");>ТУК</a></div>
  </div>
          </div>
      <div id="box3">
