--- a/index.html
+++ b/index.html
@@ -36,11 +36,7 @@
      <div id="box2cont">
      <div id="txtbox">Вижте на живо ресторант “МАКС” <br />
       <br/> Ако сте с Internet Exploler<br /> 
-        натиснете <a href="javascript:void(0);"
-NAME="My Window Name" title="Webcam "
-onClick=window.open("live.html","Ratting","width=900,height=500,0,status=0,scrollbars=1");>ТУК</a> <br /> <br/><br/>За Safari,Google Chrome,<br/>Firefox натиснете<a href="javascript:void(0);"
-NAME="My Window Name" title="Webcam"
-onClick=window.open("");>ТУК</a></div>
+        натиснете >ТУК</a></div>
  </div>
          </div>
      <div id="box3">
