--- a/kontakti.html
+++ b/kontakti.html
@@ -25,10 +25,10 @@
    
            <div id="kontaktop"><p>Адрес:<br />кв. Младост 2<br />
            ул.Проф.Д.р Васил Златарски(до бл.222)<br />
-           GSM 0885-326-275<br />Факс 02/887-33-22</p>
+           GSM 0885-326-275<br>
              <p>e-mail:</p>
              <p>makstanchevi@abv.bg</p>
-             <p>maks_restorant@mail.bg</p>
+             
 
      </div>
           <div id="kontaktimap"><div id="map_canvas" style="width:400px; height:350px"></div> 
