--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@ function MM_swapImage() { //v3.0
 }
 //-->
 </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KJ450SM6ER"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KJ450SM6ER');
+</script>
 
 
 
