--- a/promocia.html
+++ b/promocia.html
@@ -17,7 +17,7 @@
 
 
   <div id="promtxt">
-    <p>Промоционални цени от 21.11.2023г. до 11.12.2023г.</p>  
+    <p>Промоционални цени от 12.12.2023г. до 08.01.2024г.</p>  
     
     </div>
      
@@ -29,8 +29,8 @@
     <div id="promcont2"><img src="img/prom02.jpg" width="750" height="1059" alt="prom2" /></div>
     <div id="promcont3"><img src="img/prom03.jpg" width="750" height="1071" alt="prom3" /></div>
     <div id="promcont4"><img src="img/prom04.jpg" width="750" height="1069" alt="prom4" /></div>
-  
- 
+    <div id="promcont4"><img src="img/prom05.jpg" width="750" height="1069" alt="prom5" /></div>
+    <div id="promcont4"><img src="img/prom06.jpg" width="750" height="1069" alt="prom6" /></div>
 
 
 
