--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="robots" content="index, follow" />
 <link href="css/main.css" rel="stylesheet" type="text/css" />
 <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-
+<meta name="cf-2fa-verify" value="JwMrOLmnqq9QpPntrlu2" />
 </head>
 <body onload="MM_preloadImages('img/swap/vsalon.gif','img/swap/sfooter1.gif','img/swap/sfooter2.gif','img/swap/nachalo.gif','img/swap/promocia.gif','img/swap/magazini.gif','img/swap/vienski salon.gif','img/swap/biraria.gif','img/swap/kontakti.gif')">
 <div id="container">
