--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://maps.google.com https://*.googleapis.com https://*.gstatic.com; style-src 'self' 'unsafe-inline' https://maps.google.com https://*.googleapis.com https://*.gstatic.com; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; frame-src 'self' https://maps.google.com https://www.google.com; connect-src 'self' https://maps.google.com https://*.googleapis.com; base-uri 'self'; form-action 'self';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://maps.google.com https://*.googleapis.com https://*.gstatic.com https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://maps.google.com https://*.googleapis.com https://*.gstatic.com; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; frame-src 'self' https://maps.google.com https://www.google.com; connect-src 'self' https://maps.google.com https://*.googleapis.com https://www.google-analytics.com https://www.googletagmanager.com; base-uri 'self'; form-action 'self';">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="X-XSS-Protection" content="1; mode=block">
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
@@ -62,6 +62,15 @@
     <link rel="dns-prefetch" href="https://maps.google.com">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="preload" href="img/logo.png" as="image">
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KJ450SM6ER"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-KJ450SM6ER');
+    </script>
 </head>
 <body>
     <!-- Navigation -->
